<resources>
    <string name="app_name">LetsChatApplication</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign Up</string>
    <string name="names">Names</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="repeat_password">Repeat password</string>
    <string name="sign_in_anonymously">SignIn anonymously</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="sign_up_">SignUp</string>
    <string name="or">OR</string>
    <string name="sign_in">SignIn</string>
</resources>